<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:title="@string/search"
        android:id="@+id/menusearch"
        app:showAsAction="always"
        android:icon="@drawable/ic_search_white">
    </item>
    <item android:title="@string/optionmenu"
        app:showAsAction="always"
        android:icon="@drawable/ic_more" >
        <menu>
            <item android:id="@+id/color"    android:title="@string/color" android:icon="@drawable/ic_color"/>
            <item android:id="@+id/sort"    android:title="@string/sort" android:icon="@drawable/ic_sort"/>
            <item android:id="@+id/view"    android:title="@string/view" android:icon="@drawable/ic_view"/>
            <item android:id="@+id/bubble"    android:title="@string/bubble" android:icon="@drawable/ic_android_circle"/>
        </menu>
    </item>
</menu>