<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/round">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_add"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:gravity="center"
        android:paddingBottom="6dp"
        android:paddingTop="6dp"
        android:textColor="@color/green"/>
    <Button
        android:id="@+id/Add1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/addnote"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:gravity="center"
        android:paddingBottom="6dp"
        android:paddingTop="6dp" />
    <Button
        android:id="@+id/Add2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/addrecord"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:gravity="center"
        android:paddingBottom="6dp"
        android:paddingTop="6dp" />
    <Button
        android:id="@+id/Add3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/addpaint"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:gravity="center"
        android:paddingBottom="6dp"
        android:paddingTop="6dp" />
    <Button
        android:id="@+id/Add4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/addcamera"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:gravity="center"
        android:paddingBottom="6dp"
        android:paddingTop="6dp" />

</LinearLayout>