<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="500dp">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_height="500dp"
                android:layout_width="match_parent"
                android:id="@+id/canvas">
            </ImageView>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/cameratitle"
                android:textSize="30dp"
                android:textColor="@color/dark"
                android:hint="@string/title" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/cameracontent"
                android:hint="@string/content">

            </EditText>

        </LinearLayout>
    </ScrollView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/btnChangeImage"
            android:text="@string/btnchange"
            android:layout_weight="1"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/btnSaveImage"
            android:text="@string/btnSave"
            android:layout_weight="1">

        </Button>
    </LinearLayout>

</LinearLayout>