<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_theme"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:gravity="center"
        android:paddingBottom="6dp"
        android:paddingTop="6dp"
        android:textColor="@color/green"/>
    <Button
        android:id="@+id/Theme1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/theme1"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:gravity="center"
        android:paddingBottom="6dp"
        android:paddingTop="6dp" />
    <Button
        android:id="@+id/Theme2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/theme2"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:gravity="center"
        android:paddingBottom="6dp"
        android:paddingTop="6dp" />

</LinearLayout>