<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/record"
        android:textSize="50dp"
        android:textColor="@color/blue"
        android:gravity="center"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/record_name"
        android:textAlignment="center"
        android:hint="@string/record_name"/>
    <TextView
        android:text="@string/time"
        android:textSize="60dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/txtTimer" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/btn_record"
            android:src="@drawable/ic_play_button"
            android:layout_weight="1"
            />

        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/btn_stop"
            android:src="@drawable/ic_stop_button"
            android:layout_weight="1"
            />
    </LinearLayout>

</LinearLayout>