<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white">

        <!-- date toolbar -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp">

            <!-- prev button -->
            <ImageButton
                android:id="@+id/calendar_prev_button"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:src="@drawable/ic_left_arrow"/>

            <!-- date title -->
            <TextView
                android:id="@+id/calendar_date_display"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/calendar_prev_button"
                android:layout_toLeftOf="@+id/calendar_next_button"
                android:gravity="center"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:textColor="#222222"
                android:text="current date"/>

            <!-- next button -->
            <ImageButton
                android:id="@+id/calendar_next_button"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:src="@drawable/ic_right_arrow"/>
        </RelativeLayout>

        <!-- days header -->
        <LinearLayout
            android:id="@+id/calendar_header"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:textColor="#f70707"
                android:text="@string/sun"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:textColor="#222222"
                android:text="@string/mon"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:textColor="#222222"
                android:text="@string/tue"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:textColor="#222222"
                android:text="@string/wed"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:textColor="#222222"
                android:text="@string/thu"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:textColor="#222222"
                android:text="@string/fri"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:textColor="#072af7"
                android:text="@string/sat"/>

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/framelayout">
            <GridView
                android:id="@+id/calendar_grid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:numColumns="7"/>
        </FrameLayout>

        <!-- days view -->



    </LinearLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/navView"
        app:headerLayout="@layout/header"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@color/white"
        app:itemTextColor="@color/darkgray"
        app:itemIconTint="@color/darkgray"
        app:menu="@menu/notemenu"
        android:layout_gravity="start"
        ></android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>